[tool.poetry]
name = "resai-py-lib"
version = "0.1.0"
description = ""
authors = ["sitnarf <sitnarf@gmail.com>"]
readme = "README.md"
packages = [{include = "resai_py_lib"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
